src/rules/pep8_naming/snapshots/ruff__rules__pep8_naming__tests__N801_N801.py.snap
---
source: src/rules/pep8_naming/mod.rs
expression: diagnostics
---
- kind:
    InvalidClassName: bad
  location:
    row: 1
    column: 6
  end_location:
    row: 1
    column: 9
  fix: ~
  parent: ~
- kind:
    InvalidClassName: _bad
  location:
    row: 5
    column: 6
  end_location:
    row: 5
    column: 10
  fix: ~
  parent: ~
- kind:
    InvalidClassName: bad_class
  location:
    row: 9
    column: 6
  end_location:
    row: 9
    column: 15
  fix: ~
  parent: ~
- kind:
    InvalidClassName: Bad_Class
  location:
    row: 13
    column: 6
  end_location:
    row: 13
    column: 15
  fix: ~
  parent: ~
- kind:
    InvalidClassName: BAD_CLASS
  location:
    row: 17
    column: 6
  end_location:
    row: 17
    column: 15
  fix: ~
  parent: ~

