src/rules/pep8_naming/snapshots/ruff__rules__pep8_naming__tests__N807_N807.py.snap
---
source: src/rules/pep8_naming/mod.rs
expression: diagnostics
---
- kind:
    DunderFunctionName: ~
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 11
  fix: ~
  parent: ~
- kind:
    DunderFunctionName: ~
  location:
    row: 14
    column: 8
  end_location:
    row: 14
    column: 15
  fix: ~
  parent: ~

