src/rules/pep8_naming/snapshots/ruff__rules__pep8_naming__tests__N815_N815.py.snap
---
source: src/rules/pep8_naming/mod.rs
expression: diagnostics
---
- kind:
    MixedCaseVariableInClassScope:
      name: mixedCase
  location:
    row: 8
    column: 4
  end_location:
    row: 8
    column: 13
  fix: ~
  parent: ~
- kind:
    MixedCaseVariableInClassScope:
      name: _mixedCase
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 14
  fix: ~
  parent: ~
- kind:
    MixedCaseVariableInClassScope:
      name: mixed_Case
  location:
    row: 10
    column: 4
  end_location:
    row: 10
    column: 14
  fix: ~
  parent: ~

